--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,9 @@
                     <li class="nav-item">
                         <a class="nav-link mx-1" href="index.html#contact">Contact Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-1" href="todo.html">To Do</a>
+                    </li>
                 </ul>
                 <div class="text-white text-center">
                     <a href="https://www.linkedin.com/in/muhammad-nur-alamsyah-1ba2831a2/" target="_blank"><i
