--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0 text-center">
                     <li class="nav-item">
-                        <a class="nav-link active mx-1" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active mx-1" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" href="index.html#about">About Us</a>
@@ -44,6 +44,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" href="index.html#contact">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link mx-1" href="todo.html">To Do</a>
                     </li>
                 </ul>
                 <div class="text-white text-center">
